# quantum-chess

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
config/: 4x4.yaml  5x7.yaml  6x6.yaml  8x8.yaml  custom_8x8.yaml
include/quantum_chess/: MCTS.hpp  PSQT.hpp  alpha_beta.hpp  board.hpp  game.hpp  interface.hpp  qc_node.hpp  qc_tree.hpp  structs.hpp  utils.hpp
src/: board.cpp  game.cpp  interface.cpp  pesto.c  qChessNode.cpp  qChessTree.cpp  qc_node.cpp  qc_tree.cpp
